[NH] Move snippets in to actual templates.

--- a/src/hermes/renderers/html/list-feeds.html
+++ b/src/hermes/renderers/html/list-feeds.html
@@ -3,11 +3,13 @@
     <title>Hermes Feeds</title>
   </head>
   <body>
-    <div>
-      <p>1 - Filename</p>
+    <div class="feed">
+      <span class="feed-id">1234-5678</span>
+      <a href="" class="feed-file">/some/file.txt</a>
     </div>
-    <div>
-      <p>2 - Filename</p>
+    <div class="feed">
+      <span class="feed-id">9876-5432</span>
+      <a href="" class="feed-file">another-file.txt</a>
     </div>
   </body>
 </html>
