--- a/src/hermes/renderers/html/list-accounts.html
+++ b/src/hermes/renderers/html/list-accounts.html
@@ -3,11 +3,17 @@
     <title>Hermes Accounts</title>
   </head>
   <body>
-    <div>
-      <p>first account
+    <div class="account">
+      <div id="name">Name</div>
+      <div id="account_id">Account ID</div>
+      <div id="location">Somewhere</div>
+      <div id="contact-email">example@example.com</div>
     </div>
-    <div>
-      <p>second account</p>
+    <div class="accountlet">
+      <div id="name">Name 2</div>
+      <div id="account_id">Account ID 2</div>
+      <div id="location">Somewhere 2</div>
+      <div id="contact-email">another@example.com</div>
     </div>
   </body>
 </html>
