--- a/src/hermes/renderers/html/new-account.html
+++ b/src/hermes/renderers/html/new-account.html
@@ -2,15 +2,18 @@
 <head><title>Create an Account</title></head>
 <body>
   <form action="/accounts" method="POST">
-    <label for="name">Account Name</label><br/>
-    <input type="text" name="name" maxlength="100"/>
-    
-    <label for="location">Location</label><br/>
-    <input type="text" name="location" maxlength="100"/>
-    
-    <label for="contact-email">Contact email</label><br/>
-    <input type="text" name="contact-email" maxlength="100"/>
-    <br/>
+    <div>
+      <label for="name">Account Name</label>
+      <input type="text" name="name" maxlength="100"/>
+    </div>
+    <div>
+      <label for="location">Location</label>
+      <input type="text" name="location" maxlength="100"/>
+    </div>
+    <div>
+      <label for="contact-email">Contact email</label>
+      <input type="text" name="contact-email" maxlength="100"/>
+    </div>
     <input type="submit" value="Create Account"/>
   </form>
 </body>
